- Fixed left/right field widths for IE (and all browsers) [tracker #1124] - Tuned side sidebar title spacing for IE - Fixed height issue in IE on login page (tracker 1074 returns?)

--- a/css/theme.css
+++ b/css/theme.css
@@ -814,15 +814,16 @@ table.display thead th div.DataTables_sort_wrapper {
 
 td.theme-field-left {
   text-align: right;
-  width: 220;
+  width: 45%;
   padding: 5 4 5 0;  
   background: #fafafa;
   vertical-align: top;
+  white-space: nowrap;
 }
 
 td.theme-field-right {
   text-align: left;
-  width: 285;
+  width: 55%;
   padding-left: 4px;  
 }
 
@@ -1616,11 +1617,11 @@ table.display td.right {
   margin: 10px 0px;
 }
 #theme-sidebar-container h3 {
-  margin-top: 2px;
+  margin-top: 4px;
   color: #98bb60; 
   font-size: 14px;
   font-weight: normal;
-  margin-left: 2px;
+  margin-left: 4px;
 }
 #sidebar-recommended-apps {
   padding: 0px 2px;
@@ -2406,8 +2407,8 @@ a.highlight-link:hover {
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  margin-top: 15%;
-  ^margin-bottom: 800px;
+  margin-top: 0;
+  padding-top: 15%;
 }
 
 .theme-login-container .theme-form-wrapper {
@@ -2416,10 +2417,6 @@ a.highlight-link:hover {
 
 .theme-login-container .theme-form-wrapper, x:-moz-any-link, x:default {
   width: 280px;
-}
-
-.theme-login-container, x:-moz-any-link, x:default {
-  margin-top: 15%;
 }
 
 .theme-login-logo {
